<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GrabbingStageActivity">
    <FrameLayout android:id="@+id/frameGrabbingStage"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnyoutubempthree"
                      android:layout_gravity="top|center"
                      android:layout_height="match_parent"
                      android:layout_marginBottom="@dimen/_51pxv"
                      android:layout_marginEnd="@dimen/_20pxh"
                      android:layout_marginStart="@dimen/_20pxh"
                      android:layout_marginTop="@dimen/_51pxv"
                      android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarToolbar"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                              android:id="@+id/linearRowyoutubempthree"
                              android:layout_height="wrap_content"
                              android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageImageSix"
                               android:layout_height="@dimen/_16pxh"
                               android:layout_marginBottom="@dimen/_5pxv"
                               android:layout_marginTop="@dimen/_4pxv"
                               android:layout_width="@dimen/_24pxh"
                               android:scaleType="fitXY"
                               android:src="@drawable/img_image6"
                               tools:ignore="ContentDescription" tools:src="@drawable/img_image6"/>
                    <TextView android:ellipsize="end"
                              android:id="@+id/txtYouTubeMPThree"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_14pxh"
                              android:layout_weight="0.84"
                              android:layout_width="0dp"
                              android:lineSpacingExtra="@dimen/_6pxh"
                              android:singleLine="true"
                              android:text="@string/lbl_youtube_mp3"
                              style="@style/txtPlusJakartaSansromansemibold20" tools:text="@string/lbl_youtube_mp3"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                      android:id="@+id/txtYoutubeLink"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="@dimen/_10pxh"
                      android:layout_marginTop="@dimen/_28pxv"
                      android:layout_width="wrap_content"
                      android:lineSpacingExtra="@dimen/_4pxh"
                      android:singleLine="true"
                      android:text="@string/lbl_youtube_link"
                      style="@style/txtPlusJakartaSansromansemibold14" tools:text="@string/lbl_youtube_link"/>
            <EditText
                    android:background="@drawable/rectangle_bg_gray_50_border_bluegray_100_radius_8"
                    android:drawableEnd="@drawable/img_frame_13"
                    android:drawablePadding="@dimen/_30pxh"
                    android:drawableStart="@drawable/img_link"
                    android:ellipsize="end"
                    android:hint="@string/msg_https_www_you"
                    android:id="@+id/etForm" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingBottom="@dimen/_16pxv"
                    android:paddingEnd="@dimen/_20pxh"
                    android:paddingStart="@dimen/_18pxh"
                    android:paddingTop="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@={grabbingStageVM.grabbingStageModel.etFormValue}"
                    android:textColorHint="@color/gray_900"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                      android:id="@+id/txtFolder"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="@dimen/_10pxh"
                      android:layout_marginTop="@dimen/_15pxv"
                      android:layout_width="wrap_content"
                      android:lineSpacingExtra="@dimen/_4pxh"
                      android:singleLine="true"
                      android:text="@string/lbl_folder"
                      style="@style/txtPlusJakartaSansromansemibold14" tools:text="@string/lbl_folder"/>
            <EditText
                    android:background="@drawable/rectangle_bg_gray_50_border_gray_200_radius_8"
                    android:drawablePadding="@dimen/_19pxh"
                    android:drawableStart="@drawable/img_frame_4"
                    android:ellipsize="end"
                    android:hint="@string/lbl_k_pop_music"
                    android:id="@+id/etFormOne" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingBottom="@dimen/_16pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@={grabbingStageVM.grabbingStageModel.etFormOneValue}"
                    android:textColorHint="@color/gray_900"
                    style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            <LinearLayout android:gravity="start"
                          android:id="@+id/linearRowellipsefour"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/_10pxh"
                          android:layout_marginStart="@dimen/_2pxh"
                          android:layout_marginTop="@dimen/_16pxv"
                          android:layout_width="match_parent" android:orientation="horizontal">
                <FrameLayout android:id="@+id/frameStackellipsefour"
                             android:layout_height="@dimen/_15pxv"
                             android:layout_marginBottom="@dimen/_2pxv" android:layout_width="@dimen/_12pxh">
                    <View
                            android:background="@drawable/rectangle_bg_gray_600_radius_6"
                            android:id="@+id/viewEllipseFour"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_12pxh"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_12pxh"/>
                    <TextView android:ellipsize="end"
                              android:id="@+id/txtI"
                              android:layout_gravity="center"
                              android:layout_height="wrap_content"
                              android:layout_marginEnd="@dimen/_4pxh"
                              android:textSize="10sp"
                              android:layout_marginStart="@dimen/_4pxh"
                              android:layout_width="wrap_content"
                              android:singleLine="true"
                              android:text="@{grabbingStageVM.grabbingStageModel.txtI}"
                              style="@style/txtSrisakdibold12" tools:text="@string/lbl_i"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                          android:id="@+id/txtWhereyouwant"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="@dimen/_6pxh"
                          android:layout_marginTop="@dimen/_1pxv"
                          android:layout_weight="0.94"
                          android:layout_width="0dp"
                          android:textSize="10sp"
                          android:lineSpacingExtra="@dimen/_4pxh"
                          android:singleLine="true"
                          android:text="@string/msg_where_you_want"
                          style="@style/txtPlusJakartaSansromanmedium12" tools:text="@string/msg_where_you_want"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                          android:id="@+id/linearRowellipseeight"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="@dimen/_24pxv"
                          android:layout_width="match_parent"
                          android:orientation="horizontal" style="@style/groupStyledeep_purple_300cornerRadius">
                <ImageView android:id="@+id/imageEllipseEight"
                           android:layout_height="@dimen/_20pxh"
                           android:layout_marginBottom="@dimen/_18pxv"
                           android:layout_marginStart="@dimen/_89pxh"
                           android:layout_marginTop="@dimen/_18pxv"
                           android:layout_width="@dimen/_20pxh"
                           android:scaleType="fitXY"
                           android:src="@drawable/img_ellipse8"
                           tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse8"/>
                <TextView android:ellipsize="end"
                          android:id="@+id/txtGrabbingVideo"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/_16pxv"
                          android:layout_marginEnd="@dimen/_91pxh"
                          android:layout_marginStart="@dimen/_11pxh"
                          android:layout_marginTop="@dimen/_21pxv"
                          android:layout_weight="0.84"
                          android:layout_width="0dp"
                          android:lineSpacingExtra="@dimen/_4pxh"
                          android:singleLine="true"
                          android:text="@string/lbl_grabbing_video"
                          style="@style/txtPlusJakartaSansromanbold14" tools:text="@string/lbl_grabbing_video"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
