<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DowloadinStageActivity">
    <LinearLayout android:gravity="start"
                  android:id="@+id/linearDownloadingsta"
                  android:layout_height="match_parent"
                  android:layout_width="match_parent"
                  android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_51pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                          android:id="@+id/linearRowyoutubempthree"
                          android:layout_height="wrap_content"
                          android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageImageSix"
                           android:layout_height="@dimen/_16pxh"
                           android:layout_marginBottom="@dimen/_5pxv"
                           android:layout_marginTop="@dimen/_4pxv"
                           android:layout_width="@dimen/_24pxh"
                           android:scaleType="fitXY"
                           android:src="@drawable/img_image6"
                           tools:ignore="ContentDescription" tools:src="@drawable/img_image6"/>
                <TextView android:ellipsize="end"
                          android:id="@+id/txtYouTubeMPThree"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="@dimen/_14pxh"
                          android:layout_weight="0.84"
                          android:layout_width="0dp"
                          android:lineSpacingExtra="@dimen/_6pxh"
                          android:singleLine="true"
                          android:text="@string/lbl_youtube_mp3"
                          style="@style/txtPlusJakartaSansromansemibold20" tools:text="@string/lbl_youtube_mp3"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
                      android:id="@+id/linearColumn"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="@dimen/_20pxh"
                      android:layout_marginStart="@dimen/_20pxh"
                      android:layout_marginTop="@dimen/_26pxv"
                      android:layout_width="match_parent"
                      android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
            <ImageView android:gravity="center_horizontal"
                       android:id="@+id/imageImageNine"
                       android:layout_height="@dimen/_164pxh"
                       android:layout_marginEnd="@dimen/_14pxh"
                       android:layout_marginStart="@dimen/_14pxh"
                       android:layout_marginTop="@dimen/_14pxv"
                       android:layout_width="match_parent"
                       android:scaleType="fitXY"
                       android:src="@drawable/img_image9"
                       tools:ignore="ContentDescription"
                       tools:src="@drawable/img_image9"/>
            <LinearLayout android:gravity="start"
                          android:id="@+id/linearColumnblackpinkho"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/_15pxv"
                          android:layout_marginEnd="@dimen/_14pxh"
                          android:layout_marginStart="@dimen/_14pxh"
                          android:layout_marginTop="@dimen/_16pxv"
                          android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:id="@+id/txtBLACKPINKHo"
                          android:layout_height="wrap_content"
                          android:layout_width="match_parent"
                          android:lineSpacingExtra="@dimen/_8pxh"
                          android:text="@{downloadingStageVM.downloadingStageModel.txtBLACKPINKHo}"
                          style="@style/txtPlusJakartaSansromansemibold14" tools:text="@string/msg_blackpink_ho"/>
                <LinearLayout android:gravity="start"
                              android:id="@+id/linearRowframetwenty"
                              android:layout_height="wrap_content"
                              android:layout_marginEnd="@dimen/_10pxh"
                              android:layout_marginStart="@dimen/_1pxh"
                              android:layout_marginTop="@dimen/_21pxv"
                              android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageFrameTwenty"
                               android:layout_height="@dimen/_14pxh"
                               android:layout_marginBottom="@dimen/_1pxv"
                               android:layout_marginTop="@dimen/_1pxv"
                               android:layout_width="@dimen/_14pxh"
                               android:scaleType="fitXY"
                               android:src="@drawable/img_iconsviews"
                               tools:ignore="ContentDescription" tools:src="@drawable/img_iconsviews"/>
                    <TextView android:ellipsize="end"
                              android:id="@+id/txt143BViews"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_9pxh"
                              android:layout_marginTop="@dimen/_1pxv"
                              android:textSize="10sp"
                              android:layout_weight="0.43"
                              android:layout_width="0dp"
                              android:lineSpacingExtra="@dimen/_4pxh"
                              android:singleLine="true"
                              android:text="@{downloadingStageVM.downloadingStageModel.txt143BViews}"
                              style="@style/txtPlusJakartaSansromansemibold12" tools:text="@string/lbl_1_43b_views"/>
                    <ImageView android:id="@+id/imageThumbsup"
                               android:layout_height="@dimen/_11pxh"
                               android:layout_marginBottom="@dimen/_2pxv"
                               android:layout_marginStart="@dimen/_34pxh"
                               android:layout_marginTop="@dimen/_1pxv"
                               android:layout_width="@dimen/_13pxh"
                               android:scaleType="fitXY"
                               android:src="@drawable/img_thumbsup"
                               tools:ignore="ContentDescription" tools:src="@drawable/img_thumbsup"/>
                    <TextView android:ellipsize="end"
                              android:id="@+id/txtDistance"
                              android:layout_height="wrap_content"
                              android:layout_marginBottom="@dimen/_1pxv"
                              android:layout_marginStart="@dimen/_9pxh"
                              android:layout_weight="0.4"
                              android:textSize="10sp"
                              android:layout_width="0dp"
                              android:lineSpacingExtra="@dimen/_4pxh"
                              android:singleLine="true"
                              android:text="@{downloadingStageVM.downloadingStageModel.txtDistance}"
                              style="@style/txtPlusJakartaSansromansemibold12" tools:text="@string/lbl_17_4m_likes"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowdownloading"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="@dimen/_20pxh"
                      android:layout_marginStart="@dimen/_20pxh"
                      android:layout_marginTop="@dimen/_33pxv"
                      android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                      android:id="@+id/txtDownloading"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/_1pxv"
                      android:textSize="10sp"
                      android:layout_weight="0.44" android:layout_width="0dp"
                      android:lineSpacingExtra="@dimen/_4pxh"
                      android:singleLine="true"
                      android:text="@string/lbl_downloading"
                      style="@style/txtPlusJakartaSansromansemibold12_1" tools:text="@string/lbl_downloading"/>
            <TextView android:ellipsize="end"
                      android:id="@+id/txtFilesize"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/_1pxv"
                      android:layout_marginStart="@dimen/_142pxh"
                      android:textSize="10sp"
                      android:layout_weight="0.56" android:layout_width="0dp"
                      android:lineSpacingExtra="@dimen/_4pxh"
                      android:singleLine="true"
                      android:text="@{downloadingStageVM.downloadingStageModel.txtFilesize}"
                      style="@style/txtPlusJakartaSansromansemibold12" tools:text="@string/lbl_2_56mb_4_25mb"/>
        </LinearLayout>
        <ProgressBar android:gravity="center_horizontal"
                     android:id="@+id/progressBarGroupThree"
                     android:indeterminate="false"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_20pxv"
                     android:layout_marginEnd="@dimen/_20pxh"
                     android:layout_marginStart="@dimen/_20pxh"
                     android:layout_marginTop="@dimen/_10pxv"
                     android:layout_width="match_parent" android:max="100"
                     android:minHeight="@dimen/_7pxv" android:progress="4"
                     android:progressDrawable="@drawable/layer_list_bg_gray_201_radius_2"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
